--- a/.pipeline/migrate.yml
+++ b/.pipeline/migrate.yml
@@ -16,7 +16,7 @@ jobs:
 
       - task: AzureCLI@2
         inputs:
-          azureSubscription: '2bfdec85-2969-46f5-af4c-07db443148dd' 
+          azureSubscription: 'pipeline-oasis-conn' 
           scriptType: 'bash' 
           scriptLocation: 'inlineScript'
           inlineScript: "az login"
