--- a/.pipeline/migrate.yml
+++ b/.pipeline/migrate.yml
@@ -16,7 +16,7 @@ jobs:
 
       - pwsh: |        
           node ./migrate --sourceSubscriptionId "$(sourceSubscriptionId)" --sourceResourceGroupName  "$(sourceResourceGroupName)" --sourceServiceName "$(sourceServiceName)" --destServiceName "$(destinationServiceName)" --destSubscriptionId "$(destSubscriptionId)" --destResourceGroupName "$(destResourceGroupName)"  --sourceServicePrincipal "$(sourceServicePrincipal)" --sourceSecret "$(sourceServicePrincipalSecret)"  --destTenantId "$(destAzureTenantId)" --destServicePrincipal "$(destServicePrincipal)" --destSecret "$(destServicePrincipalSecret)"
-        workingDirectory: "$(System.DefaultWorkingDirectory)/scripts.v3"
+        workingDirectory: '$(System.DefaultWorkingDirectory)/scripts.v3'
         displayName: Run Migrate cmd from $(sourceServiceName) to $(destinationServiceName)  
         env:
           AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
